--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
-    "expo": "~53.0.20",
+    "expo": "^53.0.22",
     "expo-auth-session": "^6.2.1",
+    "expo-av": "^16.0.7",
     "expo-blur": "~14.1.5",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.1.7",
@@ -34,12 +36,12 @@
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-media-library": "^17.1.7",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "^14.2.3",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
@@ -47,6 +49,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
+    "react-native-draglist": "^3.10.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
